--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+* {
+  box-sizing: border-box;
+  font-family: 'WaltographRegular';
 }
+
+html, body, #root {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+}
+
